White Space Fix, fixed content width

--- a/less/main.less
+++ b/less/main.less
@@ -3,11 +3,14 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+body{
+	min-width: 1500px;
+}
 body {
 	font-family: 'Maven Pro', sans-serif;
 }
 .wrapper {
-	width: 95%;
+	width: 1500px;
 	margin: 0 auto;
 }
 a {
@@ -24,6 +27,7 @@ li {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	width: 100%;
 	&::after {
 		content: "";
 		width: 100%;
@@ -31,7 +35,7 @@ li {
 		position: absolute;
 		top: 0;
 		right: 0;
-		bottom: 0
+		bottom: 0;
 		left: 0;
 		background: url(../images/bg.png) no-repeat;
 		background-position: 50% 70%;
@@ -72,6 +76,7 @@ li {
 				display: block;
 				padding: 15px 27px 18px 27px;
 				margin-top: 15px;
+				white-space: nowrap;
 				&:hover {
 					border-bottom: 2px solid #FFF;
 				}	transition: 0.3s;
@@ -88,6 +93,7 @@ li {
 		margin-left: 30px;
 		color: #ffffff;
 		margin-top: 13px;
+		outline: none;
 		&:hover {
 			cursor: pointer;
 			background: #FFF;
@@ -264,7 +270,7 @@ li {
 		margin-top: 100px;
 		margin-bottom: 120px;
 		& .plan-card {
-			width: 440px;
+			min-width: 440px;
 			border-radius: 30px;
 			background-color: #ffffff;
 			& .logo {
